@@ -1024,6 +1024,26 @@ bool EQLimits::AllowsEmptyBagInBag(uint32 version) {
 	//return local[ValidateMobVersion(version)];
 }
 
+bool EQLimits::AllowsClickCastFromBag(uint32 version) {
+	static const bool local[_EmuClientCount] = {
+/*Unknown*/		false,
+/*62*/			Client62::limits::ALLOWS_CLICK_CAST_FROM_BAG,
+/*Titanium*/	Titanium::limits::ALLOWS_CLICK_CAST_FROM_BAG,
+/*SoF*/			SoF::limits::ALLOWS_CLICK_CAST_FROM_BAG,
+/*SoD*/			SoD::limits::ALLOWS_CLICK_CAST_FROM_BAG,
+/*Underfoot*/	Underfoot::limits::ALLOWS_CLICK_CAST_FROM_BAG,
+/*RoF*/			RoF::limits::ALLOWS_CLICK_CAST_FROM_BAG,
+/*RoF2*/		false,
+
+/*NPC*/			false,
+/*Merc*/		false,
+/*Bot*/			false,
+/*Pet*/			false
+	};
+
+	return local[ValidateMobVersion(version)];
+}
+
 // items
 uint16 EQLimits::ItemCommonSize(uint32 version) {
 	static const uint16 local[_EmuClientCount] = {
