@@ -181,6 +181,7 @@ namespace Underfoot {
 
 	namespace limits {
 		static const bool ALLOWS_EMPTY_BAG_IN_BAG = false;
+		static const bool ALLOWS_CLICK_CAST_FROM_BAG = false;
 		static const bool COIN_HAS_WEIGHT = false;
 	}
 
